--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "^6.1.18",
-    "babel-core": "^6.1.21",
-    "babel-preset-es2015": "^6.1.18",
-    "gulp-babel": "^6.1.0"
+    "babel-core": "^6.3.13",
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
+    "gulp": "^3.9.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-util": "^3.0.7",
+    "jquery": "^2.1.4",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.6.1"
   }
 }
