--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "gulp": "^3.9.0",
+    "gulp-connect": "^2.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-util": "^3.0.7",
     "jquery": "^2.1.4",
