--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "babel-core": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "babelify": "^7.2.0",
+    "bootstrap-sass": "^3.3.6",
     "browserify": "^12.0.1",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
+    "gulp-jade": "^1.1.0",
     "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.1.0",
     "gulp-util": "^3.0.7",
     "jquery": "^2.1.4",
     "vinyl-source-stream": "^1.1.0",
